[tool.poetry]
name = "bbs-api"
version = "0.1.0"
description = ""
authors = ["Buntin-Synthia <mail@buntin.xyz>"]
readme = "README.md"
packages = [{include = "bbs_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
